fix: glossary header height on mobile/handling of pagination (ZNTA-1606)

--- a/server/zanata-frontend/src/frontend/app/styles/style.less
+++ b/server/zanata-frontend/src/frontend/app/styles/style.less
@@ -315,7 +315,6 @@ body.templatestyle {
 
 .glossary-header {
   flex-direction: row-reverse;
-  height:16em;
 }
 
 .glossary-header .row {
@@ -6145,10 +6144,6 @@ i.i--left.i--lock, i.i--left.i--trash {x
     min-height: 100%;
   }
 
-  .glossary-header {
-    padding-top: 8rem;
-  }
-
   .glossaryhead-base {
     margin-left: 1.5rem;
     margin-right: 1rem;
@@ -6706,10 +6701,6 @@ i.i--left.i--lock, i.i--left.i--trash {x
 @media (min-width: @screen-md-min) {
   .lang-select {
     position: relative;
-  }
-
-  .glossary-header {
-    height:14em;
   }
 
   .modal-lg {
